--- a/.gitignore
+++ b/.gitignore
@@ -90,7 +90,7 @@ local.properties
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff:
-.idea/**/*
+.idea/**/compiler.xml
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/dictionaries
