--- a/.gitignore
+++ b/.gitignore
@@ -91,6 +91,8 @@ local.properties
 
 # User-specific stuff:
 .idea/**/compiler.xml
+.idea/**/misc.xml
+.idea/**/vcs.xml
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/dictionaries
