--- a/.gitignore
+++ b/.gitignore
@@ -90,9 +90,7 @@ local.properties
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff:
-.idea/**/compiler.xml
-.idea/**/misc.xml
-.idea/**/vcs.xml
+.idea/
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/dictionaries
