--- a/.gitignore
+++ b/.gitignore
@@ -90,7 +90,8 @@ local.properties
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff:
-.idea/
+.idea/libraries
+.idea/dictionaries
 
 # Sensitive or high-churn files:
 .idea/**/dataSources/
@@ -143,7 +144,6 @@ fabric.properties
 # *.iml
 # modules.xml
 # .idea/misc.xml
-# .idea/*
 # *.ipr
 
 # Sonarlint plugin
