--- a/.gitignore
+++ b/.gitignore
@@ -90,7 +90,9 @@ local.properties
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff:
-.idea/libraries
+.idea/**/*.xml
+.idea/**/workspace.xml
+.idea/**/tasks.xml
 .idea/dictionaries
 
 # Sensitive or high-churn files:
