--- a/.gitignore
+++ b/.gitignore
@@ -92,6 +92,7 @@ local.properties
 # User-specific stuff:
 .idea/**/*.xml
 .idea/**/workspace.xml
+.idea/**/misc.xml
 .idea/**/tasks.xml
 .idea/dictionaries
 
