--- a/.gitignore
+++ b/.gitignore
@@ -93,6 +93,7 @@ local.properties
 .idea/**/*.xml
 .idea/**/workspace.xml
 .idea/**/misc.xml
+.idea/misc.xml
 .idea/**/tasks.xml
 .idea/dictionaries
 
